# beam

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
config/: defaults.yaml  mainnet.yaml
docs/: orchestrator.md  validator.md
neurons/orchestrator/: .env.example  Dockerfile  README.md  __init__.py  main.py  pyproject.toml
neurons/orchestrator/clients/: __init__.py  subnet_core_client.py
neurons/orchestrator/core/: __init__.py  config.py  epoch_manager.py  orchestrator.py  proof_aggregator.py  reward_manager.py  task_scheduler.py  worker_manager.py
neurons/orchestrator/middleware/: __init__.py  metrics.py  rate_limiting.py
neurons/orchestrator/routes/: __init__.py  health.py  orchestrators.py
neurons/orchestrator/services/: __init__.py
neurons/shared/: __init__.py  merkle.py
neurons/validator/: README.md  __init__.py  main.py
neurons/validator/chain/: __init__.py  fiber_chain.py
neurons/validator/clients/: __init__.py  subnet_core_client.py
neurons/validator/core/: __init__.py  _beam_stubs.py  config.py  redundancy.py  validator.py
neurons/validator/services/: __init__.py  weight_calculator.py
neurons/worker/: Dockerfile  README.md  __init__.py  worker.py
